1999-12-20  Keiichi Suzuki  <keiichi@nanap.org>

	* alist.el, atype.el, broken.el, calist.el, emu-mule.el, emu.el,
	  env.el, file-detect.el, filename.el, install.el, inv-18.el,
	  inv-19.el, inv-xemacs.el, invisible.el, localhook.el,
	  mcharset.el, mcs-20.el, mcs-e20.el, mcs-ltn1.el, mcs-nemacs.el,
	  mcs-om.el, mcs-xm.el, mcs-xmu.el, mule-caesar.el, path-util.el,
	  pccl-20.el, pccl-om.el, pccl.el, pces-20.el, pces-e20.el,
	  pces-e20_2.el, pces-nemacs.el, pces-om.el, pces-raw.el,
	  pces-xfc.el, pces-xm.el, pces.el, pcustom.el, poe-18.el,
	  poe-xemacs.el, poe.el, poem-e20.el, poem-e20_2.el,
	  poem-e20_3.el, poem-ltn1.el, poem-nemacs.el, poem-om.el,
	  poem-xm.el, poem.el, richtext.el, static.el, time-stamp.el,
	  tinycustom.el, tinyrich.el (TopLevel): Add product information.

	* Sync up with apel-product.

* 1999-11-12  Keiichi Suzuki  <keiichi@nanap.org>

	* product.el (product-define): Add new slot `version-string'.
	(product-provide): Likewise.
	(product-version-string): New function.
	(product-set-version-string): New function.
	(product-string-1): Use `version-string'.
	(product-for-each): New function.
	(product-string): Separate `product-string' and
	`product-string-verbose'.
	(product-string-verbose): Likewise.
	(product-parse-version-string): New function.

* 1999-11-12  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* product.el: Some `checkdoc' fixes.
	(product-version>=): Eliminate local variable.

* 1999-11-12  Keiichi Suzuki  <keiichi@nanap.org>

	* product.el: New file.

	* apel-ver.el: New file.

	* APEL-ELS (apel-modules): Add `apel-ver' and `product'.

1999-11-25  Yuuichi Teranishi  <teranisi@gohome.org>

	* poe-18.el (current-time-string, current-time): New functions.

1999-11-12  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* README.en (Version specific information): New section.
	(Bug reports): Updated description of APEL mailing-lists.

	* pcustom.el [old custom]: Refer to it.

	* tinycustom.el: checkdoc.
