@@ -1,9 +1,10 @@
-;;; apel-version.el --- Declare APEL version.
+;;; apel-ver.el --- Declare APEL version.
 
-;; Copyright (C) 1999 Shuhei KOBAYASHI
+;; Copyright (C) 1999 Free Software Foundation, Inc.
+;; Copyright (C) 1999 Keiichi Suzuki
 
 ;; Author: Shuhei KOBAYASHI <shuhei@aqua.ocn.ne.jp>
-;;         Keiichi Suzuki <keiichi@nanap.org>
+;;	Keiichi Suzuki <keiichi@nanap.org>
 ;; Keywords: compatibility
 
 ;; This file is part of APEL (A Portable Emacs Library).
@@ -53,4 +54,4 @@
 ;;; @ End.
 ;;;
 
-;;; apel-version.el ends here.
+;;; apel-ver.el ends here.
