@@ -1,3 +1,7 @@
+1999-12-20  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>
+
+	* apel-ver.el, product.el: Header fix.
+
 1999-12-20  Keiichi Suzuki  <keiichi@nanap.org>
 
 	* alist.el, atype.el, broken.el, calist.el, emu-mule.el, emu.el,
